# interview-integrity

./: .gitignore  README.md  process_users.py  pyproject.toml  shared.py  users.json
app/v1/: README.md  streamlit_app.py
v2-interview-signals/: README.md  TODO.md  fix_transcript.py  periodic-table-scored.html  periodic-table.html  run.py  scoring-spec.md  transcript.py
v2-interview-signals/elements/: __init__.py
v2-interview-signals/elements/answer_structure/: __init__.py  act.py  ctx.py  drf.py  ex.py  rel.py  res.py  star.py  str.py
v2-interview-signals/elements/confidence_signals/: __init__.py  conf.py  hold.py  nerv.py  own.py  pres.py  recv.py  trust.py
v2-interview-signals/elements/conversation_behavior/: __init__.py  adp.py  ans.py  ask.py  bf.py  lis.py  rec.py  turn.py
v2-interview-signals/elements/fluency/: __init__.py  coh.py  conn.py  flo.py  frag.py  fs.py  rep.py  run.py  sc.py
v2-interview-signals/elements/language_quality/: __init__.py  gap.py  grm.py  idi.py  pwr.py  reg.py  repw.py  sent.py  sva.py  tech.py  ten.py  voc.py
v2-interview-signals/elements/pace_rhythm/: __init__.py  acc.py  dec.py  drg.py  pac.py  rhy.py  rus.py  wpm.py
v2-interview-signals/elements/pauses_silence/: __init__.py  fp.py  hp.py  lat.py  op.py  pau.py  rp.py  sil.py
v2-interview-signals/elements/reasoning/: __init__.py  beyond.py  (+7 more)
v2-interview-signals/notebooks/: interview-signal-capture.ipynb  prototype-notebook.py
v2-interview-signals/rubric/: feedback-cards.md
v2-interview-signals/utils/: audio.py  html_report.py  llm.py  scoring.py  transcript.py
(+32 files in other folders)
